data/derived/comb/progs/unify/prog6414.ml.out
Characters 70-75:
  | front::back -> back ::front;;
                          ^^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list list
       The type variable 'a occurs inside 'a list list
